--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <body>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 <div class="container-fluid">
   <div class="banner ">
@@ -17,7 +18,7 @@
 </div>
 
 <div class="container-fluid aboutsection"> 
-  <div class="aboutbox">
+  <div class="aboutbox" >
     <h1>About Me</h1>
     <p>
       I'm a passionate and dedicated web developer with advanced expertise in Angular, specializing in building dynamic,
@@ -218,8 +219,8 @@
 
     <div class="footer-section contact">
       <h3>Contact Me</h3>
-      <p>Email: <a href="mailto:your.email@example.com">abu17official.gmail&#64;.com</a></p>
-      <p>Phone: <a href="tel:+1234567890">8820509843</a></p>
+      <p>Email: <a href="mailto:your.email@example.com">abu17official&#64;gmail.com</a></p>
+      <p>Phone: <a href="tel:+1234567890">8220509843</a></p>
       <p>WhatsApp: <a href="https://wa.me/yourphonenumber" target="_blank">Message me</a></p>
       <p>GitHub: <a href="https://github.com/yourusername" target="_blank">DevStq</a></p>
     </div>
@@ -228,9 +229,8 @@
       <h3>Follow Me</h3>
       <ul class="social-icons">
         <li><a href="https://github.com/DevStq" target="_blank"><i class="fab fa-github"></i></a></li>
-        <li><a href="8220509843" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-        <li><a href="abu17official.gmail&#64;.com"><i class="fas fa-envelope"></i></a></li>
-        <li><a href="tel:+1234567890"><i class="fas fa-phone-alt"></i></a></li>
+        <li><a href="abu17official&#64;gmail.com"><i class="fas fa-envelope"></i></a></li>
+        <li><a href="tel:8220509843"><i class="fas fa-phone-alt"></i></a></li>
       </ul>
     </div>
   </div>
